--- a/style.css
+++ b/style.css
@@ -24,13 +24,19 @@ body {
     padding-bottom: 2em;
 }
 
+.text-a {
+    font-weight: 700;
+    color: hsl(218, 44%, 22%);
+    font-size: 22px;
+}
+
 p {
     color: hsl(216, 15%, 48%);
     font-size: 15px;
 }
 
 img {
-    width: 330px;
+    width: 300px;
     border-radius: 4%;
 }
 
@@ -44,9 +50,12 @@ img {
         width: 260px;
     }
 
-    h2 {
+    .text-a {
         font-size: 20px;
     }
+     p{
+        font-size: 14px;
+     }
 }
 
 
